Pre blocks no longer wrap text.

--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -4,8 +4,9 @@ pre {
     margin-bottom: 1em;
     padding: 1em;
 
+    overflow-wrap: normal;
     overflow: auto;
-    // overflow-x: scroll;
-    // white-space: pre-wrap;
+    overflow-x: scroll;
+    white-space: pre;
     // background-color: rgba(218,218,218, 0.4)
 }
